syntax = "proto3";

service UserService {
    rpc GetAll (Empty) returns (UserList) {}
    rpc Validate (UserRequestValidate) returns (UserResPonseValidate) {}
    rpc UpdateToken (UserRequestToken) returns (Empty) {}
}

message Empty {}

message User {
    string id = 1;
    string name = 2;
    int32 age = 3;
    string address = 4;
}

message UserList {
    repeated User Users = 1;
}

message UserRequestValidate {
    string email = 1;
    string password = 2;
}

message UserRequestToken {
    string email = 1;
    string token = 2;
}

message UserResPonseValidate {
    bool status = 1;
    string message = 2;
}
